RESOLVED FIXED199297
Fix crash in ScrollingStateNode::insertChild()
https://bugs.webkit.org/show_bug.cgi?id=199297
Summary Fix crash in ScrollingStateNode::insertChild()
Simon Fraser (smfr)
Reported 2019-06-27 16:02:36 PDT
Fix crash in ScrollingStateNode::insertChild()
Attachments
Patch (6.75 KB, patch)
2019-06-27 16:14 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-06-27 16:14:25 PDT
Simon Fraser (smfr)
Comment 2 2019-06-27 16:14:28 PDT
WebKit Commit Bot
Comment 3 2019-06-27 18:09:52 PDT
Comment on attachment 373066 [details] Patch Clearing flags on attachment: 373066 Committed r246913: <https://trac.webkit.org/changeset/246913>
WebKit Commit Bot
Comment 4 2019-06-27 18:09:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.