Source/WebCore/page/scrolling/ScrollingStateNode.cpp
@@ -53,6 +53,8 @@ ScrollingStateNode::ScrollingStateNode(const ScrollingStateNode& stateNode, Scro
 {
     if (hasChangedProperty(Layer))
         setLayer(stateNode.layer().toRepresentation(adoptiveTree.preferredLayerRepresentation()));
+
+    relaxAdoptionRequirement();
     scrollingStateTree().addNode(*this);
 }
 
